# Convert-Speech-to-Text-and-Text-to-Speech

./: README.md  pyproject.toml  requirements.txt
src/speech_text_converter/: __init__.py  gui.py  main.py  stt.py  tts.py
tests/: test_smoke.py
