[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-text-converter"
version = "0.1.0"
description = "Tkinter app + CLI for Speech→Text (mic) and Text→Speech (gTTS)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mobin Yousefi", email = "example@example.com" }]
keywords = ["speech recognition", "gTTS", "Tkinter", "TTS", "STT"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
  "SpeechRecognition>=3.10.0",
  "gTTS>=2.5.1",
  "playsound==1.2.2",
  "PyAudio>=0.2.14",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/speech-text-converter"

[project.scripts]
speech-text-converter = "speech_text_converter.main:cli_main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = []
